<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="calcu.calculator.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/mainscreen"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:textAppearance= "?android:textAppearanceLarge"
        android:layout_margin="0dp"
        android:textSize="42sp"
        android:gravity="end"
        android:maxLines="2"
        android:maxLength="15"
        android:background="#203f51"
        android:textColor="#F8F8E8"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColorLink="#7f99b1"
        />

    <Button
        android:id="@+id/button7"
        android:layout_below="@+id/mainscreen"
        android:layout_alignLeft="@+id/mainscreen"
        android:layout_alignStart="@+id/mainscreen"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="7"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#194772"
        android:maxWidth="90dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/mainscreen"
        android:text="8"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#194772"
        android:maxWidth="90dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/mainscreen"
            android:text="9"
            android:layout_toRightOf="@+id/button8"
            android:layout_toEndOf="@+id/button8"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button7"
            android:text="4"
            android:layout_alignLeft="@+id/button7"
            android:layout_alignStart="@+id/button7"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="80dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button8"
            android:text="5"
            android:layout_toRightOf="@+id/button4"
            android:layout_toEndOf="@+id/button4"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button9"
            android:text="6"
            android:layout_toRightOf="@+id/button5"
            android:layout_toEndOf="@+id/button5"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button4"
            android:text="1"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button5"
            android:text="2"
            android:layout_toRightOf="@+id/button1"
            android:layout_toEndOf="@+id/button1"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_below="@+id/button6"
            android:text="3"
            android:layout_toRightOf="@+id/button2"
            android:layout_toEndOf="@+id/button2"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="80dp" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button1"
            android:text="C"
            android:layout_alignLeft="@+id/button1"
            android:layout_alignStart="@+id/button1"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#ff0000"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button2"
            android:text="0"
            android:layout_toRightOf="@+id/buttonC"
            android:layout_toEndOf="@+id/buttonC"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/buttondot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button3"
            android:text="."
            android:layout_toRightOf="@+id/button0"
            android:layout_toEndOf="@+id/button0"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#194772"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/buttondivide"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_below="@+id/mainscreen"
            android:text="/"
            android:layout_toRightOf="@+id/button9"
            android:layout_toEndOf="@+id/button9"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#f6a201"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/buttonmultiply"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_below="@+id/buttondivide"
            android:text="X"
            android:layout_toRightOf="@+id/button6"
            android:layout_toEndOf="@+id/button6"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#f6a201"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/buttonminus"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_below="@+id/buttonmultiply"
            android:text="-"
            android:layout_toRightOf="@+id/button3"
            android:layout_toEndOf="@+id/button3"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#f6a201"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/buttonplus"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_below="@+id/buttonminus"
            android:text="+"
            android:layout_toRightOf="@+id/buttondot"
            android:layout_toEndOf="@+id/buttondot"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#f6a201"
            android:maxWidth="90dp" />

        <Button
            android:id="@+id/buttonequal"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_below="@+id/buttonC"
            android:text="="
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:background="#203f51"
            android:maxWidth="90dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:textSize="10sp"
            android:layout_below="@+id/buttonequal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#203f51"
            android:text="© All rights reserved || Powered by Sakib, 2019-2020"
            android:textAlignment="center"
            />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
